--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                                             <p>The causes range from simple things like forgetting what's in the fridge until the food has spoiled to never finding a use for the food we purchase. Then there is the food that we always eat and the problem becomes how can we make sure we never run out of our favourite foods when we need them the most. The purpose of my project is to reduce the amount of food we waste by visually confronting users of what they have in their kitchens as well always ensuring that our kitchens stay stocked with the food we eat the most.</p>
                                             
 
-                                            <a class="btn btn-primary" href="home.html">Demo</a>
+                                            <a class="btn btn-primary" href="http://simonmadadi.com/home.html">Demo</a>
 
                                         </div>
                                     </div>
