--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                <p>I'm currently available for freelance work</p>
                                <h4><a href="mailto:madadi@sheridancollege.ca">Send me an email</a></h4>
                                <h4><a href="SimonMadadiResume.pdf">View my Resume</a></h4>
-                               <h5><a href="ball-svg_test.html">.</a></h5>
+                               <h5><a href="giftbox4.html">.</a></h5>
                             </div>
                             
                         
