--- a/jeep.html
+++ b/jeep.html
@@ -33,7 +33,7 @@
 		var sphere = new THREE.Mesh(
 			new THREE.SphereGeometry(100, 20, 20),
 			new THREE.MeshBasicMaterial({
-				map: THREE.ImageUtils.loadTexture('preikestolen.jpg')
+				map: THREE.ImageUtils.loadTexture('img/bergsjostolen.jpg')
 			})
 		);
 		sphere.scale.x = -1;
