--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                <h4><a href="mailto:madadi@sheridancollege.ca">Send me an email</a></h4>
                                <h4><a href="SimonMadadiResume.pdf">View my Resume</a></h4>
                                <h5><a href="giftbox4.html">.</a></h5>
-                               <h5><a href="jeep360.html">.</a></h5>
+                               <h5><a href="Shoebox-reveal-4.html">.</a></h5>
                             </div>
                             
                         
