--- a/Shoebox-reveal-4.html
+++ b/Shoebox-reveal-4.html
@@ -13,6 +13,14 @@
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <title>Shoebox-reveal-4</title>
 <!-- write your code here -->
+<style>
+  #animation_container {
+	position:absolute;
+	margin:auto;
+	left:0;right:0;
+	top:0;bottom:0;
+  }
+</style>
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
 <script>
 (function (cjs, an) {
@@ -71,15 +79,15 @@ p.nominalBounds = new cjs.Rectangle(-45.4,-18.1,89.9,36.3);
 (lib.Symbol18 = function(mode,startPosition,loop) {
 	this.initialize(mode,startPosition,loop,{});
 	// Layer_1
-	this.text = new cjs.Text("CONGRATULATIONS!", "bold 22px 'Avenir Next'", "#009900");
+	this.text = new cjs.Text("CONGRATULATIONS!", "bold 22px 'Arial'", "#009900");
 	this.text.textAlign = "center";
-	this.text.lineHeight = 32;
+	this.text.lineHeight = 27;
 	this.text.lineWidth = 419;
 	this.text.parent = this;
 	this.text.setTransform(211.55,27.7);
-	this.text_1 = new cjs.Text("YOU WIN A PAIR OF SHOES", "bold 14px 'Avenir Next'", "#333333");
+	this.text_1 = new cjs.Text("YOU WIN A PAIR OF SHOES", "bold 14px 'Arial'", "#333333");
 	this.text_1.textAlign = "center";
-	this.text_1.lineHeight = 21;
+	this.text_1.lineHeight = 18;
 	this.text_1.lineWidth = 307;
 	this.text_1.parent = this;
 	this.text_1.setTransform(211.6,56.7);
@@ -260,15 +268,15 @@ p.nominalBounds = new cjs.Rectangle(-45.4,-18.1,89.9,36.3);
 	// actions tween:
 	this.timeline.addTween(cjs.Tween.get(this).call(this.frame_0).wait(244));
 	// Message
-	this.text = new cjs.Text("SORRY!", "bold 22px 'Avenir Next'", "#CC0000");
+	this.text = new cjs.Text("SORRY!", "bold 22px 'Arial'", "#CC0000");
 	this.text.textAlign = "center";
-	this.text.lineHeight = 32;
+	this.text.lineHeight = 27;
 	this.text.lineWidth = 419;
 	this.text.parent = this;
 	this.text.setTransform(-0.793,-50.85,0.7938,0.7938);
-	this.text_1 = new cjs.Text("YOU DID NOT WIN A PRIZE :(", "bold 14px 'Avenir Next'", "#333333");
+	this.text_1 = new cjs.Text("YOU DID NOT WIN A PRIZE :(", "bold 14px 'Arial'", "#333333");
 	this.text_1.textAlign = "center";
-	this.text_1.lineHeight = 21;
+	this.text_1.lineHeight = 18;
 	this.text_1.lineWidth = 307;
 	this.text_1.parent = this;
 	this.text_1.setTransform(-0.793,-27.85,0.7938,0.7938);
@@ -1030,7 +1038,7 @@ p.nominalBounds = new cjs.Rectangle(0,0,167.5,46.4);
 	}
 	this.timeline.addTween(cjs.Tween.get(this.instance_21).wait(62).to({_off:false},0).wait(1).to({scaleX:1.05,scaleY:1.05,y:106.7545},0).wait(1).to({scaleX:1.0999,scaleY:1.0999,y:98.9091},0).wait(1).to({scaleX:1.1499,scaleY:1.1499,y:91.0715},0).wait(1).to({scaleX:1.1998,scaleY:1.1998,y:83.2182},0).wait(1).to({scaleX:1.2498,scaleY:1.2498,y:75.3727},0).wait(1).to({scaleX:1.2997,scaleY:1.2997,y:67.5351},0).wait(1).to({scaleX:1.3497,scaleY:1.3497,y:59.6897},0).wait(1).to({scaleX:1.3996,scaleY:1.3996,y:51.8364},0).wait(1).to({scaleX:1.4495,scaleY:1.4495,y:43.9909},0).wait(1).to({scaleX:1.4995,scaleY:1.4995,y:36.1455},0).wait(1).to({scaleX:1.5495,scaleY:1.5495,y:28.3},0).wait(1).to({y:26.285},0).wait(1).to({y:24.27},0).wait(1).to({y:22.255},0).wait(1).to({y:20.24},0).wait(1).to({y:18.225},0).wait(1).to({y:16.21},0).wait(1).to({y:14.195},0).wait(1).to({y:12.18},0).wait(1).to({y:10.165},0).wait(1).to({y:8.15},0).wait(1).to({y:8.75},0).wait(1).to({y:9.35},0).wait(1).to({y:9.95},0).wait(1).to({y:10.55},0).wait(1).to({y:11.15},0).wait(1).to({y:11.75},0).wait(1).to({y:12.35},0).wait(1).to({y:12.95},0).wait(1).to({y:13.55},0).wait(1).to({y:14.15},0).wait(1).to({y:13.55},0).wait(1).to({y:12.95},0).wait(1).to({y:12.35},0).wait(1).to({y:11.75},0).wait(1).to({y:11.15},0).wait(1).to({y:10.55},0).wait(1).to({y:9.95},0).wait(1).to({y:9.35},0).wait(1).to({y:8.75},0).wait(1).to({y:8.15},0).wait(1).to({y:8.78},0).wait(1).to({y:9.41},0).wait(1).to({y:10.04},0).wait(1).to({y:10.67},0).wait(1).to({y:11.3},0).wait(1).to({y:11.93},0).wait(1).to({y:12.56},0).wait(1).to({y:13.19},0).wait(1).to({y:13.82},0).wait(1).to({y:14.45},0).wait(1).to({y:13.82},0).wait(1).to({y:13.19},0).wait(1).to({y:12.56},0).wait(1).to({y:11.93},0).wait(1).to({y:11.3},0).wait(1).to({y:10.67},0).wait(1).to({y:10.04},0).wait(1).to({y:9.41},0).wait(1).to({y:8.78},0).wait(1).to({y:8.15},0).wait(1).to({y:8.42},0).wait(1).to({y:8.69},0).wait(1).to({y:8.96},0).wait(1).to({y:9.23},0).wait(1).to({y:9.5},0).wait(1).to({y:9.77},0).wait(1).to({y:10.04},0).wait(1).to({y:10.31},0).wait(1).to({y:10.58},0).wait(1).to({y:10.85},0).wait(1).to({y:10.67},0).wait(1).to({y:10.49},0).wait(1).to({y:10.31},0).wait(1).to({y:10.13},0).wait(1).to({y:9.95},0).wait(1).to({y:9.77},0).wait(1).to({y:9.59},0).wait(1).to({y:9.41},0).wait(1).to({y:9.23},0).wait(1).to({y:9.05},0).wait(1).to({y:9.53},0).wait(1).to({y:10.01},0).wait(1).to({y:10.49},0).wait(1).to({y:10.97},0).wait(1).to({y:11.45},0).wait(1).to({y:11.93},0).wait(1).to({y:12.41},0).wait(1).to({y:12.89},0).wait(1).to({y:13.37},0).wait(1).to({y:13.85},0).wait(1).to({y:13.37},0).wait(1).to({y:12.89},0).wait(1).to({y:12.41},0).wait(1).to({y:11.93},0).wait(1).to({y:11.45},0).wait(1).to({y:10.97},0).wait(1).to({y:10.49},0).wait(1).to({y:10.01},0).wait(1).to({y:9.53},0).wait(1).to({y:9.05},0).wait(1).to({y:9.53},0).wait(1).to({y:10.01},0).wait(1).to({y:10.49},0).wait(1).to({y:10.97},0).wait(1).to({y:11.45},0).wait(1).to({y:11.93},0).wait(1).to({y:12.41},0).wait(1).to({y:12.89},0).wait(1).to({y:13.37},0).wait(1).to({y:13.85},0).wait(1).to({y:13.37},0).wait(1).to({y:12.89},0).wait(1).to({y:12.41},0).wait(1).to({y:11.93},0).wait(1).to({y:11.45},0).wait(1).to({y:10.97},0).wait(1).to({y:10.49},0).wait(1).to({y:10.01},0).wait(1).to({y:9.53},0).wait(1).to({y:9.05},0).wait(1).to({y:9.53},0).wait(1).to({y:10.01},0).wait(1).to({y:10.49},0).wait(1).to({y:10.97},0).wait(1).to({y:11.45},0).wait(1).to({y:11.93},0).wait(1).to({y:12.41},0).wait(1).to({y:12.89},0).wait(1).to({y:13.37},0).wait(1).to({y:13.85},0).wait(1).to({y:13.37},0).wait(1).to({y:12.89},0).wait(1).to({y:12.41},0).wait(1).to({y:11.93},0).wait(1).to({y:11.45},0).wait(1).to({y:10.97},0).wait(1).to({y:10.49},0).wait(1).to({y:10.01},0).wait(1).to({y:9.53},0).wait(1).to({y:9.05},0).wait(1).to({y:9.53},0).wait(1).to({y:10.01},0).wait(1).to({y:10.49},0).wait(1).to({y:10.97},0).wait(1).to({y:11.45},0).wait(1).to({y:11.93},0).wait(1).to({y:12.41},0).wait(1).to({y:12.89},0).wait(1).to({y:13.37},0).wait(1).to({y:13.85},0).wait(1).to({y:13.37},0).wait(1).to({y:12.89},0).wait(1).to({y:12.41},0).wait(1).to({y:11.93},0).wait(1).to({y:11.45},0).wait(1).to({y:10.97},0).wait(1).to({y:10.49},0).wait(1).to({y:10.01},0).wait(1).to({y:9.53},0).wait(1).to({y:9.05},0).wait(1).to({y:9.53},0).wait(1).to({y:10.01},0).wait(1).to({y:10.49},0).wait(1).to({y:10.97},0).wait(1).to({y:11.45},0).wait(1).to({y:11.93},0).wait(1).to({y:12.41},0).wait(1).to({y:12.89},0).wait(1).to({y:13.37},0).wait(1).to({y:13.85},0).wait(1).to({y:13.37},0).wait(1).to({y:12.89},0).wait(1).to({y:12.41},0).wait(1).to({y:11.93},0).wait(1).to({y:11.45},0).wait(1).to({y:10.97},0).wait(1).to({y:10.49},0).wait(1).to({y:10.01},0).wait(1).to({y:9.53},0).wait(1).to({y:9.05},0).wait(1));
 }).prototype = p = new cjs.MovieClip();
-p.nominalBounds = new cjs.Rectangle(-211.5,-602.6,423.1,790);
+p.nominalBounds = new cjs.Rectangle(-172.5,-91.1,315,398.4);
 (lib.Opening = function(mode,startPosition,loop) {
 	this.initialize(mode,startPosition,loop,{});
 	// timeline functions:
@@ -1925,7 +1933,7 @@ function handleComplete(evt,comp) {
 			stage.tickOnUpdate = true;		
 		}
 	}
-	makeResponsive(true,'both',false,1);	
+	makeResponsive(true,'both',true,1);	
 	AdobeAn.compositionLoaded(lib.properties.id);
 	fnStartAnimation();
 }
