--- a/Shoebox-reveal-5-demo_mobile.html
+++ b/Shoebox-reveal-5-demo_mobile.html
@@ -1116,7 +1116,7 @@ p.nominalBounds = new cjs.Rectangle(-211.5,-602.6,423.1,790);
 		*/
 		this.resetBtn.addEventListener("click", fl_ClickToGoToWebPage);
 		function fl_ClickToGoToWebPage() {
-			window.open("www.simonmadadi.com/Shoebox-reveal-5-demo_mobile.html","_self");
+			window.open("Shoebox-reveal-5-demo_mobile.html","_self");
 		}
 	}
 	// actions tween:
