--- a/Shoebox-reveal-6-demo_mobile.html
+++ b/Shoebox-reveal-6-demo_mobile.html
@@ -2019,7 +2019,7 @@ function handleComplete(evt,comp) {
 			stage.tickOnUpdate = true;		
 		}
 	}
-	makeResponsive(true,'both',false,1);	
+	makeResponsive(true,'both',true,1);	
 	AdobeAn.compositionLoaded(lib.properties.id);
 	fnStartAnimation();
 }
