--- a/Shoebox-reveal-6-demo_mobile.html
+++ b/Shoebox-reveal-6-demo_mobile.html
@@ -11,6 +11,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
+<meta name="viewport" content="width=device-width, minimum-scale=1.0">
+    
 <title>Shoebox-reveal-6-demo_mobile</title>
 <!-- write your code here -->
 <style>
@@ -1022,7 +1024,7 @@ p.nominalBounds = new cjs.Rectangle(-172.5,-591.4,336,771.5);
 		*/
 		this.resetBtn.addEventListener("click", fl_ClickToGoToWebPage);
 		function fl_ClickToGoToWebPage() {
-			window.open("Shoebox-reveal-6-demo_mobile.html","_self");
+			window.open("http://127.0.0.1:8090/Shoebox-reveal-5-demo_mobile.html","_self");
 		}
 	}
 	// actions tween:
